--- a/style.css
+++ b/style.css
@@ -21,3 +21,27 @@ header{
 .subtitulo {
     font-size: 18px;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+}
+
+.fundo {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.botao {
+    display: flex;
+    justify-content: center;
+}
+
+.confirmacao {
+    width: 100%;
+    height: 61px;
+    border-radius: 50px;
+    margin: 0px 25px 16px 25px;
+    background-color: #CBCBCB;
+}
