--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #E5E5E5;
+}
+
 header{
     display: flex;
     justify-content: center;
@@ -16,6 +20,7 @@ header{
 
 .titulo {
     font-size: 44px;
+    margin-bottom: 17px;
 }
 
 .subtitulo {
@@ -31,11 +36,13 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    background-color:#FFFFFF;   
 }
 
 .botao {
+    margin-top: 15px;
     display: flex;
-    justify-content: center;
+
 }
 
 .confirmacao {
@@ -44,4 +51,51 @@ footer {
     border-radius: 50px;
     margin: 0px 25px 16px 25px;
     background-color: #CBCBCB;
+}
+
+main {
+    margin-top: 120px;
+    margin-left: 19px;
+    margin-bottom: 120px;
+}
+
+.titulo {
+    width: 250px;
+    font-size: 26px;
+}
+
+.prato {
+    display: flex;
+    flex-direction: column;
+    width: 172px;
+    height: 216px;
+}
+
+.itens {
+    display: flex;
+    flex-direction: row;
+}
+
+.item {
+    margin-right: 16px;
+}
+
+
+.img-item {
+    width: 144px;
+    height: 87px;
+}
+
+.item-conteudo {
+    margin-left: 14px;
+
+}
+
+.titulo-item {
+    margin-top: 8px;
+    margin-bottom: 4px;
+}
+
+.descricao-item {
+    margin-bottom: 5px;
 }
