--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #E5E5E5;
 }
@@ -18,13 +22,10 @@ header{
     color: #ffffff;
 }
 
-.titulo {
-    font-size: 44px;
-    margin-bottom: 17px;
-}
-
 .subtitulo {
     font-size: 18px;
+    font-family: roboto;
+    font-weight: 400;
 }
 
 footer {
@@ -60,15 +61,33 @@ main {
 }
 
 .titulo {
-    width: 250px;
     font-size: 26px;
+    font-family: righteous;
+    font-size: 44px;
+    margin-bottom: 5px;
+}
+
+.tituloPrato {
+    font-family: righteous;
+    font-weight: 400;
+    font-size: 26px;
+    margin-bottom: 17px;
+    color: #333333;
 }
 
 .prato {
     display: flex;
-    flex-direction: column;
     width: 172px;
-    height: 216px;
+    height: auto;
+    margin-bottom: 27px;
+}
+
+
+.preco {
+    font-family: roboto;
+    font-weight: 400;
+    color: #000000;
+    margin-bottom: 16px;
 }
 
 .itens {
@@ -80,26 +99,35 @@ main {
     margin-right: 16px;
     border: 5px solid;
     border-color: white;
+    background-color: white;
+    border-radius: 9px;
 }
 
 
 .img-item {
     width: 144px;
     height: 87px;
+    border-radius: 4px;
 }
 
 .item-conteudo {
     margin-left: 14px;
-
+    margin-right: 14px;
+    margin-top: 18px;
 }
 
 .titulo-item {
     margin-top: 8px;
     margin-bottom: 4px;
+    font-family: roboto;
+    font-weight: 700;
 }
 
 .descricao-item {
     margin-bottom: 5px;
+    font-family: roboto;
+    font-weight: 300;
+    color: #A6A6A6;
 }
 
 .verde-botao {
