--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header{
 .topo {
     background-color:#CF2B2B;
     position: fixed;
-    width: 100%;
+    width: 100vw;
 }
 
 .texto-topo {
@@ -36,7 +36,7 @@ footer {
 .fundo {
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
     background-color:#FFFFFF;   
 }
 
@@ -47,7 +47,7 @@ footer {
 }
 
 .confirmacao {
-    width: 100%;
+    width: 100vw;
     height: 61px;
     border-radius: 50px;
     margin: 0px 25px 16px 25px;
@@ -56,7 +56,6 @@ footer {
 
 main {
     margin-top: 120px;
-    margin-left: 19px;
     margin-bottom: 120px;
 }
 
@@ -77,9 +76,13 @@ main {
 
 .prato {
     display: flex;
-    width: 172px;
     height: auto;
     margin-bottom: 27px;
+    overflow-x: scroll;
+}
+
+.pratos {
+    margin-left: 19px;
 }
 
 
