--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header{
     background-color:#CF2B2B;
     position: fixed;
     width: 100vw;
+    z-index: 1;
 }
 
 .texto-topo {
@@ -48,7 +49,6 @@ footer {
 }
 
 .botao-texto {
-    align-items: ;
     font-family: roboto;
     font-weight: 400;
     font-size: 20px;
@@ -113,8 +113,8 @@ main {
     border-color: white;
     background-color: white;
     border-radius: 9px;
+    position: relative;
 }
-
 
 .img-item {
     width: 144px;
@@ -136,10 +136,19 @@ main {
 }
 
 .descricao-item {
-    margin-bottom: 5px;
+    margin-top: 4px;
+    margin-bottom: 9px;
     font-family: roboto;
     font-weight: 300;
     color: #A6A6A6;
+}
+
+ion-icon {
+    position: absolute;
+    color: green;
+    bottom: 0;
+    right: 0;
+    display: none;
 }
 
 .verde-botao {
